<resources>
    <string name="app_name">uccd3223_assignment_G13</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="notification">Notifications</string>
    <string name="appearance">Appearance</string>
    <string name="security">Privacy &amp; Security</string>
    <string name="about">About Us</string>
    <string name="logout">Logout</string>
    <string name="name">Name: </string>
    <string name="dob">Date of Birth: </string>
    <string name="phone">Phone number: </string>
    <string name="budget">Budget: </string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>