<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A000000"
    android:paddingLeft="10pt"
    android:paddingTop="10pt"
    android:paddingRight="10pt"
    android:paddingBottom="10pt"
    tools:context=".SettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/bgSet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Settings"
                android:textSize="@dimen/sizeTitle" />

        </LinearLayout>

        <TextView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1pt"
            android:background="#000000" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10pt"
                android:paddingTop="10pt"
                android:paddingRight="10pt"
                android:paddingBottom="10pt">

                <Button
                    android:id="@+id/account"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textSize="@dimen/size1"
                    app:icon="@drawable/baseline_account_circle_24" />

                <Button
                    android:id="@+id/appearance"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/appearance"
                    android:textSize="@dimen/size1"
                    app:icon="@android:drawable/ic_menu_view" />

                <Button
                    android:id="@+id/security"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/security"
                    android:textSize="@dimen/size1"
                    app:icon="@android:drawable/ic_lock_idle_lock" />

                <Button
                    android:id="@+id/about"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textSize="@dimen/size1"
                    app:icon="@drawable/baseline_info_outline_24" />

                <Button
                    android:id="@+id/logout"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textSize="@dimen/size1"
                    app:icon="@drawable/baseline_logout_24" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</FrameLayout>