<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A000000"
    android:paddingLeft="10pt"
    android:paddingTop="10pt"
    android:paddingRight="10pt"
    android:paddingBottom="10pt"
    tools:context=".account">

    <LinearLayout
        android:id="@+id/bgAcc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="23dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_setting"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="visible"
                app:icon="@drawable/baseline_arrow_back_24"
                app:iconSize="40dp"
                app:iconTint="#000000" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/account"
                android:textSize="@dimen/sizeTitle" />

            <TextView
                android:id="@+id/space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                tools:visibility="visible" />
        </LinearLayout>

        <TextView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1pt"
            android:background="#000000" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10pt"
                android:paddingTop="10pt"
                android:paddingRight="10pt"
                android:paddingBottom="10pt">

                <Button
                    android:id="@+id/name"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/name"
                    android:textSize="@dimen/size1" />

                <Button
                    android:id="@+id/dob"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/dob"
                    android:textSize="@dimen/size1" />

                <Button
                    android:id="@+id/phone"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/phone"
                    android:textSize="@dimen/size1" />

                <Button
                    android:id="@+id/budget"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/budget"
                    android:textSize="@dimen/size1" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>